--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "CircleCi-Utube",
   "version": "1.0.0",
   "description": "projeto para começar a aprender a desenvolver orientado a testes",
-  "main": "index.js",
+  
   "scripts": {
     "build": "sucrase ./src -d ./dist --transforms imports",
-    "dev": "nodemon ./src/app.js",
-    "start": "node ./dist/app.js",
+    "dev": "nodemon ./src/server.js",
+    "start": "node ./dist/server.js",
     "test": "jest"
   },
   "repository": "https://github.com/josejonathan7/Circleci-Urube.git",
@@ -15,16 +15,27 @@
   "devDependencies": {
     "@sucrase/jest-plugin": "^2.2.0",
     "@types/jest": "^27.0.2",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.3",
     "jest": "^27.3.1",
     "nodemon": "^2.0.15",
-    "sucrase": "^3.20.3"
+    "sucrase": "^3.20.3",
+    "supertest": "^6.1.6"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "uuidv4": "^6.2.12"
   },
   "jest": {
     "transform": {
       ".(js|jsx|ts|tsx)": "@sucrase/jest-plugin"
+    }
+  },
+  "nodemonConfig": {
+    "execMap": {
+      "js": "node -r sucrase/register"
     }
   }
 }
